--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Dima2024Alekseev.github.io/kpk/home",
+  "homepage": "https://Dima2024Alekseev.github.io/home",
   "name": "kpk",
   "version": "0.1.0",
   "private": true,
