--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
