--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.5.1",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.3",
     "cra-template": "1.2.0",
     "helmet": "^8.0.0",
     "react": "^19.0.0",
