--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "cra-template": "1.2.0",
+    "exceljs": "^4.4.0",
     "helmet": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
